Fix icon alignement

--- a/src/dw_design_system/dwds/elements/content_icon.scss
+++ b/src/dw_design_system/dwds/elements/content_icon.scss
@@ -12,7 +12,10 @@
 
 .content-with-icon {
     display: inline-flex;
-    align-items: baseline;
+
+    // TODO: Re address this in the ticket INTR-337
+    align-items: normal;
+    // align-items: baseline;
 
     &.min-gap {
         > .content-icon {
